--- a/Heroes3MapReader.UI/Views/MainWindow.axaml
+++ b/Heroes3MapReader.UI/Views/MainWindow.axaml
@@ -209,7 +209,8 @@
                     BorderThickness="1"
                     CornerRadius="5"
                     Margin="0">
-                <DataGrid ItemsSource="{Binding FilteredMaps}"
+                <DataGrid x:Name="MapsDataGrid"
+                          ItemsSource="{Binding FilteredMaps}"
                           SelectedItem="{Binding SelectedMap}"
                           IsReadOnly="True"
                           GridLinesVisibility="Horizontal"
